--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,8 @@ dependencies = [
   "nonebot-plugin-uninfo>=0.7.1,<1.0.0", # 若不使用多平台用户信息获取插件应删除
   "nonebot-plugin-alconna>=0.56.2,<1.0.0", # 若不使用 alconna 跨平台命令解析拓展应删除
   # "nonebot-adapter-onebot>=2.4.6,<3.0.0", # 仅 onebot 应取消注释
-  "pydantic-ai[mcp]>=0.0.46",
+  "pydantic-ai[logfire,mcp]>=0.0.46",
+  "e2b-code-interpreter>=1.2.0",
 ]
 
 [dependency-groups]
