--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,14 +9,9 @@ requires-python = ">=3.10,<3.13"
 dependencies = [
   "httpx>=0.27.0,<1.0.0",
   "nonebot2>=2.4.2,<3.0.0",
-  "nonebot-plugin-localstore>=0.7.4,<1.0.0", # 若不需要存储文件应删除
-  "nonebot-plugin-apscheduler>=0.5.0,<1.0.0", # 若不使用定时任务应删除
-  "nonebot-plugin-waiter>=0.8.1,<1.0.0", # 若不使用增强版的 got-reject 会话控制应删除
-  "nonebot-plugin-uninfo>=0.7.1,<1.0.0", # 若不使用多平台用户信息获取插件应删除
-  "nonebot-plugin-alconna>=0.56.2,<1.0.0", # 若不使用 alconna 跨平台命令解析拓展应删除
-  # "nonebot-adapter-onebot>=2.4.6,<3.0.0", # 仅 onebot 应取消注释
+  "nonebot-plugin-uninfo>=0.7.1,<1.0.0",
+  "nonebot-plugin-alconna>=0.56.2,<1.0.0",
   "pydantic-ai[logfire,mcp]>=0.0.46",
-  "e2b-code-interpreter>=1.2.0",
 ]
 
 [dependency-groups]
